# Man1Lab

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  app.py  config.py  pixi.toml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: config_parser_settings.py  factory.py  pymupdf_parser.py
agents/: __init__.py  analysis_context.py  coder.py  coder_quality.py  planner.py  reader.py  reporter.py  reviewer.py  runner.py
application/: __init__.py  facade.py  lifecycle.py  platform_execution.py  reproduction_pipeline.py  version.py
conf/: config.yaml
configuration/: __init__.py  bootstrap.py  hydra_provider.py  legacy_provider.py  models.py  paths.py
discovery/: assets.py  confidence.py  workflow.py
docs/: CURRENT_STATUS.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md
execution/: __init__.py  decomposition.py  engine.py  errors.py  report.py  resume.py  scheduling.py
execution_materialization/: __init__.py  graph_builder.py  materializer.py  ports.py  task_factory.py  templates.py  validation.py
execution_planning/: execution_graph.py  stages.py  workflow.py
interfaces/: __init__.py
llm/: __init__.py  anthropic_provider.py  coder_mock_provider.py  compat.py  factory.py  mock_provider.py  openai_provider.py  provider.py  response_parser.py
man1lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
models/: __init__.py  execution.py  execution_graph.py  execution_materialization.py  execution_plan.py  execution_planning_runtime.py  explainable_confidence.py  paper.py  paper_reproduction_analysis.py  report.py  research_resource_discovery.py  review.py  review_report.py  routing.py  task.py  verification.py  workspace.py
planning/: patch_planner.py
ports/: __init__.py  adaptation_provider.py  collection_provider.py  document_parser.py  (+5 more)
(+567 files in other folders)
